--- a/static/index.html
+++ b/static/index.html
@@ -6,19 +6,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="og:title" property="og:title" content="PsyLink">
         <meta name="description" content='A makeshift neural interface'>
-        <link rel="shortcut icon" type="image/gif" href="data:image/gif;base64,R0lGODdhBAAEAOMBAFQAzFUAzFgBzV0DzmQG0G4K1IES2osW3ZUZ358e47El6L0q7MUt7dAx8uM59/VA/CwAAAAABAAEAAAEDJAIEJApg6l0nmtLBAA7">
+        <link rel="shortcut icon" type="image/png" href="logo.png">
         <link rel="stylesheet" href="style.css" type="text/css" />
     </head>
     <body>
-        <center>
-            <article>
-                <h1>PsyLink</h1>
+        <header>
+            <div class="content">
+                <a href="index.html">
+                    <img class="logo" src="logo.png" />
+                    <span class="header">PsyLink</span>
+                </a>
+                <span class="menu">
+                    <a href="https://hut.pm/psylink.html">Blog</a>
+                    <a href="https://codeberg.org/hut/psylink">Code</a>
+                    <a href="index.xml"><img src="feed-icon.png" class="rss" /></a>
+                </span>
+            </div>
+        </header>
+        <article>
+            <div class="content">
+                <h1>Welcome to PsyLink</h1>
+                <p>
+                    This is a research project to explore various approaches to non-invasive neural interfaces.
+                </p>
                 <img src="https://hut.pm/data/psy/-hardware.jpg"></img>
-                <ul>
-                    <li><a href="https://codeberg.org/hut/psylink">Source code, data sheet, pictures</a></li>
-                    <li><a href="https://hut.pm/psylink.html">Development Log</a></li>
-                </ul>
-            </article>
-        </center>
+            </div>
+        </article>
     </body>
 </html>
