update links from codeberg.org/hut/psylink to psylink/psylink

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
                 </a>
                 <span class="menu">
                     <a href="https://hut.pm/psylink.html">Blog</a>
-                    <a href="https://codeberg.org/hut/psylink">Code</a>
+                    <a href="https://codeberg.org/psylink/psylink">Code</a>
                     <a href="index.xml"><img src="feed-icon.png" class="rss" /></a>
                 </span>
             </div>
